# Video-Audio-to-Text-Transcription

./: .gitattributes  .gitignore  README.md  README.zh-CN.md
app/: README.md  pyproject.toml
app/src/bili_whisper/: audio_extract.py  bilibili_playlist.py  cli.py  config.py  downloader.py  gui.py  media.py  model_preload.py  paths.py  pipeline.py  subtitle.py  transcriber_base.py  transcriber_faster_whisper.py  transcriber_funasr.py  utils.py
data/: README.md
data/cookies/: README.md
runtime/: README.md
scripts/: bootstrap.ps1  clean-cache.ps1  doctor.ps1  env.ps1  gui.ps1  install-runtime.ps1  patch-yt-dlp-bilibili.ps1  run.ps1
